--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,9 @@ Probador/.vs/Probador/v15/Server/sqlite3/storage.ide-shm
 Probador/obj/Debug/Probador.exe
 Probador/obj/Debug/Probador.pdb
 Probador/obj/Debug/Probador.vbprojAssemblyReference.cache
+NETCoreADO/NETCoreADO/obj/Debug/netstandard2.0/NETCoreADO.vbproj.FileListAbsolute.txt
+NETCoreBLB/NETCoreBLB/obj/Debug/netstandard2.0/NETCoreBLB.vbprojAssemblyReference.cache
+Probador/.vs/Probador/v15/.suo
+Probador/obj/Debug/Probador.exe
+Probador/obj/Debug/Probador.pdb
+Probador/obj/Debug/Probador.vbprojAssemblyReference.cache
