--- a/NETCoreBLB/NETCoreBLB/NETCoreBLB.vbproj
+++ b/NETCoreBLB/NETCoreBLB/NETCoreBLB.vbproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
   </ItemGroup>
 
