--- a/NETCoreBLB/NETCoreBLB/NETCoreBLB.vbproj
+++ b/NETCoreBLB/NETCoreBLB/NETCoreBLB.vbproj
@@ -9,18 +9,21 @@
     <OutputPath>D:\GIT CORE2\BIN\DEBUG\</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>D:\GIT CORE2\BIN\RELEASE\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\NETCoreADO\NETCoreADO\NETCoreADO.vbproj" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <Reference Include="NETCoreADO">
+      <HintPath>..\..\..\BIN\DEBUG\netstandard2.0\NETCoreADO.dll</HintPath>
+    </Reference>
     <Reference Include="NETCoreCrypto">
-      <HintPath>..\..\..\..\BIN\DEBUG\netstandard2.0\NETCoreCrypto.dll</HintPath>
+      <HintPath>..\..\..\BIN\DEBUG\netstandard2.0\NETCoreCrypto.dll</HintPath>
     </Reference>
   </ItemGroup>
 
