--- a/NETCoreCrypto/NETCoreCrypto.vbproj
+++ b/NETCoreCrypto/NETCoreCrypto.vbproj
@@ -9,6 +9,10 @@
     <OutputPath>D:\GIT CORE2\BIN\DEBUG\</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>D:\GIT CORE2\BIN\RELEASE\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
