--- a/Probador/Probador.vbproj
+++ b/Probador/Probador.vbproj
@@ -165,5 +165,8 @@
       <Name>NETCoreBLB</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
