Arreglo errores con el Código de Suceso y las Fechas Desde y Hasta

--- a/Probador/Probador.vbproj
+++ b/Probador/Probador.vbproj
@@ -38,7 +38,7 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\..\..\BIN\DEBUG\netstandard2.0\</OutputPath>
+    <OutputPath>..\..\BIN\DEBUG\netstandard2.0\</OutputPath>
     <DocumentationFile>Probador.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
