--- a/NETCoreBLB/NETCoreBLB/NETCoreBLB.vbproj
+++ b/NETCoreBLB/NETCoreBLB/NETCoreBLB.vbproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
+    <PackageReference Include="System.Runtime.Extensions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
